# GalaXtic-Bot

./: .gitignore  CHANGELOG.md  pyproject.toml
galaxtic/: __init__.py  __main__.py  bot.py  config.py
galaxtic/cogs/: admin.py  ai.py  anime.py  embed_msg.py  fun.py  games.py  media.py  music.py  owner.py  utility.py
galaxtic/db/: __init__.py
galaxtic/utils/: ai.py  escape.py  logging.py
